[package]
name = "hello-htmx-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3" }
futures-util = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
