[package]
name = "hello-htmx-rust-postgres-login"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
futures-util = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tera = { version = "1.20" }
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = [
  "with-uuid-1",
  "with-chrono-0_4",
  "array-impls",
] }
uuid = { version = "1.10", features = ["serde", "v4", "fast-rng"] }
warp = { version = "0.3" }
edb_orm = { path = "./edb_orm/" }
